 - output from datamodel to NASA CDF added
 - new methods on dmarrays (append, concatenate, h/v/dstack)
irbempy
 - updated to latest revision of IRBEM library (rev425)
 - consistent with IRBEMlib release version 4.4.0
LANL*
 - added new neural network trained on RAM-SCB model (valid inside 6.6Re)
pycdf
 - fix bug in time types with pre-3.4.1 CDF library


Changes in Version 0.1.3
========================
- Substantial updates to documentation
  - including publication list, case studies
- Minor bugfixes throughout
- Expanded unit testing
- Several functions deprecated:
  - toolbox.leap_year (use time.leapyear)
- Several previously deprecated functions removed:
  - toolbox.makePoly (use matplotlib.pyplot.fill_between)
- Several functions moved:
  - leapyear: from toolbox to time
  - randomDate: from toolbox to time
  - applySmartTimeTicks, smartTimeTicks, printfig, timestamp:
    from toolbox to plot.utils
- Number of base level imports limited
- MAJOR BUG in IRBEM library (T01S and TS04 models) fixed.
datamodel
 - new count method on dmarray
 - HDF5 output now supports many more types
 - output from datamodel to HTML table added
irbempy
 - Updated IRBEM library (including major bugfix to T01S and TS04)
 - 'custom' internal B-field model set to Dungey model (dipole + uniform)
 - revised multiprocessing of get_Lstar to use standard library
 - new get_Lm function
LANLstar
 - LANLstar v3 (with improved UI) now packaged with SpacePy
 - Fortran backend replaced (now requires ffnet Python package)
omni
 - additional OMNI parameters added to hourly database
pycdf
 - Convert to numpy-based backend, substantially faster/more flexible
 - Speed up extending variables with additional data (roughly 4x as fast)
 - Better integration with datamodel
 - Deletion bug still present in CDF 3.4; extend workaround to later version
 - Support for new CDF_TIME_TT2000 variable type
time
 - Ticktock is now iterable and adds/subtracts datetime.timedeltas